--- a/index.html
+++ b/index.html
@@ -157,5 +157,122 @@
 
 <footer>© 2025 Valiant Vision • Made for curious learners</footer>
 
+<!-- ================== AI CHATBOT ================== -->
+<div id="chatbot">
+  <div id="chat-icon">💬</div>
+  <div id="chat-window" class="hidden">
+    <div id="chat-header">
+      <span>🤖 Valiant AI</span>
+      <button id="close-btn">×</button>
+    </div>
+    <div id="chat-messages"></div>
+    <div id="chat-input">
+      <input type="text" id="userInput" placeholder="Ask me anything..." />
+      <button id="voiceBtn">🎤</button>
+      <button id="sendBtn">➤</button>
+    </div>
+  </div>
+</div>
+
+<style>
+  /* Floating button */
+  #chatbot { position: fixed; bottom: 20px; right: 20px; font-family: Arial, sans-serif; z-index: 1000; }
+  #chat-icon {
+    background: #4300b9; color: #fff; font-size: 26px; padding: 14px;
+    border-radius: 50%; cursor: pointer; box-shadow: 0 6px 14px rgba(0,0,0,.2);
+  }
+  /* Chat window */
+  #chat-window {
+    width: 320px; height: 420px; background: #fff; border-radius: 12px;
+    box-shadow: 0 6px 16px rgba(0,0,0,.25); display: flex; flex-direction: column;
+    position: absolute; bottom: 70px; right: 0;
+  }
+  #chat-window.hidden { display: none; }
+  #chat-header {
+    background: linear-gradient(135deg, #4300b9, #76b900); color: #fff; padding: 10px;
+    display: flex; justify-content: space-between; align-items: center;
+    border-radius: 12px 12px 0 0; font-weight: bold;
+  }
+  #chat-messages {
+    flex: 1; padding: 10px; overflow-y: auto; font-size: 0.95rem;
+  }
+  .msg { margin: 8px 0; padding: 8px 12px; border-radius: 10px; max-width: 85%; }
+  .user-msg { background: #4300b9; color: #fff; margin-left: auto; }
+  .bot-msg { background: #f1f1f1; color: #333; margin-right: auto; }
+  #chat-input { display: flex; padding: 10px; gap: 6px; }
+  #chat-input input {
+    flex: 1; padding: 10px; border: 1px solid #ccc; border-radius: 8px;
+  }
+  #chat-input button {
+    background: #76b900; border: none; color: #fff; padding: 10px 14px;
+    border-radius: 8px; cursor: pointer; font-size: 16px;
+  }
+</style>
+
+<script>
+  const chatIcon = document.getElementById("chat-icon");
+  const chatWindow = document.getElementById("chat-window");
+  const closeBtn = document.getElementById("close-btn");
+  const sendBtn = document.getElementById("sendBtn");
+  const voiceBtn = document.getElementById("voiceBtn");
+  const userInput = document.getElementById("userInput");
+  const chatMessages = document.getElementById("chat-messages");
+
+  const API_URL = "https://script.google.com/macros/s/AKfycby--Buzyn55_1KxawGc9M4q5FwSgUbdnjGkf6LcIo94X9EzwRV9DxQQehFTVBIvhtkDOg/exec";
+
+  // Open / close chat
+  chatIcon.onclick = () => chatWindow.classList.toggle("hidden");
+  closeBtn.onclick = () => chatWindow.classList.add("hidden");
+
+  // Add message to chat window
+  function addMessage(text, sender) {
+    const msg = document.createElement("div");
+    msg.className = "msg " + (sender === "user" ? "user-msg" : "bot-msg");
+    msg.innerText = text;
+    chatMessages.appendChild(msg);
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+  }
+
+  // Send message to AI
+  async function sendMessage() {
+    const text = userInput.value.trim();
+    if (!text) return;
+    addMessage(text, "user");
+    userInput.value = "";
+
+    try {
+      let res = await fetch(API_URL, {
+        method: "POST",
+        body: JSON.stringify({ prompt: text }),
+      });
+      let data = await res.text();
+      addMessage(data, "bot");
+
+      // Speak AI response
+      let utterance = new SpeechSynthesisUtterance(data);
+      speechSynthesis.speak(utterance);
+
+    } catch (err) {
+      addMessage("⚠️ Error: " + err.message, "bot");
+    }
+  }
+
+  sendBtn.onclick = sendMessage;
+  userInput.addEventListener("keypress", e => { if (e.key === "Enter") sendMessage(); });
+
+  // 🎤 Voice recognition
+  voiceBtn.onclick = () => {
+    const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+    recognition.lang = "en-US";
+    recognition.start();
+    recognition.onresult = (e) => {
+      userInput.value = e.results[0][0].transcript;
+      sendMessage();
+    };
+  };
+</script>
+<!-- ================== END CHATBOT ================== -->
+
 </body>
 </html>
+
