--- a/index.html
+++ b/index.html
@@ -96,6 +96,50 @@
 
   footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
 </style>
+  <style>
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: Arial, sans-serif;
+  background-color: #1e1e1e;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#assistant {
+  width: 90%;
+  max-width: 600px;
+  background: #2e2e2e;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 0 20px #000;
+}
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 6px;
+  border: none;
+  margin-bottom: 10px;
+}
+button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px;
+  background-color: #4caf50;
+  color: #fff;
+  cursor: pointer;
+}
+#answer {
+  margin-top: 15px;
+  background: #1e1e1e;
+  padding: 15px;
+  border-radius: 6px;
+  min-height: 50px;
+}
+</style>
+
 </head>
 <body>
 
@@ -273,6 +317,34 @@
 </script>
 <!-- ================== END CHATBOT ================== -->
 
+  <div id="assistant">
+  <h2>Ask me anything</h2>
+  <input type="text" id="question" placeholder="Type your question...">
+  <button onclick="askQuestion()">Ask</button>
+  <div id="answer"></div>
+</div>
+<script>
+const scriptURL = "YOUR_GOOGLE_SCRIPT_URL_HERE"; // Replace with your Apps Script URL
+
+async function askQuestion() {
+  const question = document.getElementById('question').value;
+  if (!question) return;
+
+  const answerDiv = document.getElementById('answer');
+  answerDiv.innerHTML = "Thinking... 🤔";
+
+  try {
+    const response = await fetch(`${scriptURL}?question=${encodeURIComponent(question)}`);
+    const data = await response.json();
+    answerDiv.innerHTML = data.answer || "No answer found.";
+  } catch (err) {
+    console.error(err);
+    answerDiv.innerHTML = "Error connecting to AI.";
+  }
+}
+</script>
+
 </body>
 </html>
+
 
