--- a/index.html
+++ b/index.html
@@ -10,153 +10,152 @@
 
 <style>
   :root{
-    --vv-green:#76b900;
-    --vv-purple:#4300b9;
+    --vv-green:#76b900;    /* vivid green */
+    --vv-purple:#4300b9;   /* vivid purple */
+    --vv-dark:#141316;
+    --vv-text:#2c2c2c;
+    --vv-muted:#6b6b6b;
     --vv-bg:#f4f4f7;
     --shadow:0 10px 30px rgba(0,0,0,.08);
   }
   *{box-sizing:border-box}
-  body{margin:0;font-family:'Lora',serif;background:var(--vv-bg);color:#222;line-height:1.6}
-
-  /* Navbar */
-  nav{position:sticky;top:0;background:#fff;box-shadow:0 2px 6px rgba(0,0,0,.1);padding:10px 20px;display:flex;justify-content:space-between;align-items:center;z-index:1000}
-  .brand{display:flex;align-items:center;gap:10px}
-  .brand img{height:40px}
-  .brand .name{font:800 1.4rem 'Montserrat',sans-serif;color:var(--vv-purple)}
-  .menu a{margin:0 10px;text-decoration:none;color:var(--vv-purple);font:600 0.95rem 'Montserrat',sans-serif}
-  .menu a:hover{color:var(--vv-green)}
-
-  /* Hero */
-  .hero{padding:80px 20px;text-align:center;background:linear-gradient(135deg,rgba(67,0,185,.2),rgba(118,185,0,.2)),url('hero.jpg') center/cover no-repeat;color:#111}
-  .hero h1{font-family:'Montserrat',sans-serif;font-size:2.6rem;font-weight:800}
-  .hero p{max-width:700px;margin:15px auto;font-size:1.1rem}
-
-  /* Sections */
-  section{max-width:1000px;margin:60px auto;padding:0 20px}
-  h2{font-family:'Montserrat',sans-serif;font-size:2rem;color:#222}
-
-  footer{text-align:center;padding:20px;color:#666;margin-top:40px}
-
-  /* ===== FULL SCREEN AI CHAT ===== */
-  #ai-assistant{
-    position:fixed;inset:0;background:#fff;z-index:2000;display:none;
-    flex-direction:column;font-family:'Lora',serif;
+  html,body{margin:0}
+  body{
+    font-family:'Lora', serif;
+    color:var(--vv-text);
+    background:var(--vv-bg);
+    line-height:1.6;
   }
-  #ai-header{
+
+  /* ===== NAVBAR ===== */
+  .nav{
+    position:sticky; top:0; z-index:50;
+    background:#fff; border-bottom:1px solid #ececf0;
+    box-shadow:0 6px 14px rgba(67,0,185,0.05);
+  }
+  .nav-inner{
+    max-width:1100px; margin:0 auto; padding:10px 20px;
+    display:flex; align-items:center; justify-content:space-between; gap:16px;
+  }
+  .brand{display:flex; align-items:center; gap:12px}
+  .brand img{height:48px; width:auto}
+  .brand .name{font:800 1.5rem/1 'Montserrat', sans-serif; color:var(--vv-purple)}
+  .menu{display:flex; gap:18px; align-items:center}
+  .menu a{
+    font:600 0.95rem/1 'Montserrat', sans-serif;
+    color:var(--vv-purple); text-decoration:none;
+    padding:8px 12px; border-radius:10px; transition:all .2s ease;
+  }
+  .menu a:hover,.menu a.active{ background:var(--vv-purple); color:#fff }
+
+  /* ===== HERO ===== */
+  .hero{
+    position:relative; isolation:isolate;
+    min-height:72vh; display:grid; place-items:center;
+    padding:72px 20px 56px;
+    background:
+      radial-gradient(1200px 500px at 10% -10%, rgba(118,185,0,.35),transparent 60%),
+      radial-gradient(1200px 500px at 110% 10%, rgba(67,0,185,.35),transparent 60%),
+      #0f0d2a;
+    overflow:hidden;
+  }
+  .hero::before{
+    content:"";
+    position:absolute; inset:0; z-index:-1;
+    background:url('hero.jpg') center/cover no-repeat;
+    opacity:.35; filter:contrast(110%) saturate(110%) blur(1px);
+  }
+  .hero-card{
+    width:100%; max-width:920px;
+    background:rgba(255,255,255,.92);
+    border-radius:24px; box-shadow:var(--shadow);
+    padding:32px; backdrop-filter:saturate(130%) blur(4px);
+    text-align:center;
+  }
+  .hero h1{font-family:'Montserrat',sans-serif;font-weight:800;font-size:2.4rem;color:#111}
+  .hero p{max-width:760px;margin:.75rem auto 1.25rem;color:#333;font-size:1.05rem}
+  .btn{
     background:linear-gradient(135deg,var(--vv-purple),var(--vv-green));
-    color:#fff;padding:15px 20px;font-size:1.2rem;font-weight:bold;
-    display:flex;justify-content:space-between;align-items:center;
+    color:#fff;border:0;padding:14px 20px;border-radius:12px;
+    font-weight:700;font-family:'Montserrat',sans-serif;cursor:pointer;
+    box-shadow:0 8px 18px rgba(67,0,185,.18);transition:.2s;
   }
-  #ai-messages{
-    flex:1;overflow-y:auto;padding:20px;background:#f9f9fb;
-  }
-  .msg{margin:10px 0;padding:12px 16px;border-radius:10px;max-width:75%}
-  .user-msg{background:var(--vv-purple);color:#fff;margin-left:auto}
-  .bot-msg{background:#ececf9;color:#111;margin-right:auto}
-  #ai-input{
-    display:flex;padding:15px;border-top:1px solid #ddd;gap:8px;
-  }
-  #ai-input input{
-    flex:1;padding:12px;border:1px solid #ccc;border-radius:8px;
-  }
-  #ai-input button{
-    background:var(--vv-green);border:none;color:#fff;font-weight:700;
-    padding:12px 18px;border-radius:8px;cursor:pointer;
-  }
+  .btn:hover{opacity:.9}
+
+  /* ===== SECTIONS ===== */
+  section{max-width:1100px;margin:64px auto;padding:0 20px}
+  section.card{ background:#fff; border-radius:20px; box-shadow:var(--shadow); padding:28px; }
+  h2.section-title{ font-family:'Montserrat',sans-serif; font-weight:800; font-size:2rem; margin:.25rem 0 1rem; color:#222 }
+  .kit-list{list-style:none;padding:0}
+  .kit-list li{background:#fff;margin-bottom:12px;padding:14px 16px;border-left:4px solid var(--vv-purple);border-radius:12px;box-shadow:0 1px 6px rgba(0,0,0,.05)}
+
+  .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
+  @media (max-width:900px){.grid-3{grid-template-columns:1fr}}
+  .cardlet{background:#fff;border-radius:16px;padding:18px;box-shadow:var(--shadow)}
+  .cardlet h3{margin:.2rem 0 .35rem;color:var(--vv-purple);font-family:'Montserrat',sans-serif}
+
+  footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
 </style>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav>
-  <div class="brand">
-    <img src="Valiant Vision.jpg" alt="Logo">
-    <div class="name">Valiant Vision</div>
-  </div>
-  <div class="menu">
-    <a href="#about">About Us</a>
-    <a href="#problem">Problem</a>
-    <a href="#solution">Our Solution</a>
-    <a href="subscribe.html">Subscribe</a>
-    <a href="#" id="openAI">Ask Valiant AI 🤖</a>
+<!-- NAVBAR -->
+<nav class="nav">
+  <div class="nav-inner">
+    <div class="brand">
+      <img src="Valiant Vision.jpg" alt="Valiant Vision logo">
+      <div class="name">Valiant Vision</div>
+    </div>
+    <div class="menu">
+      <a href="#about" class="active">About Us</a>
+      <a href="#problem">Problem</a>
+      <a href="#solution">Our Solution</a>
+      <a href="subscribe.html">Subscribe</a>
+      <a href="whiteboard.html">Whiteboard</a>
+    </div>
   </div>
 </nav>
 
-<!-- Hero -->
+<!-- HERO -->
 <header class="hero">
-  <h1>Welcome to Valiant Vision</h1>
-  <p>Empowering students with creativity kits, opportunities, and an AI mentor to guide your curiosity.</p>
+  <div class="hero-card">
+    <h1>Give Your Curiosity a Home</h1>
+    <p>Unlock monthly creativity kits designed by mentors from leading universities. Join our journey of learning by doing.</p>
+    <a href="subscribe.html"><button class="btn">Subscribe Now</button></a>
+  </div>
 </header>
 
-<!-- Sections -->
-<section id="about">
-  <h2>About Us</h2>
-  <p>We bring students hands-on kits + a learning network to build skills that matter.</p>
+<!-- ABOUT -->
+<section id="about" class="card">
+  <h2 class="section-title">About Valiant Vision</h2>
+  <p>We nurture curiosity with thoughtfully curated kits and a supportive network. Students learn by doing,
+     reflect with guided prompts, and share progress through a friendly profile and skill badges.</p>
+  <ul class="kit-list">
+    <li><strong>Interactive Notebooks:</strong> Cut, paste, draw, and reflect to cement ideas.</li>
+    <li><strong>Sticky Notes:</strong> Perfect for brainstorming and collaborative charts.</li>
+    <li><strong>Whiteboards & Markers:</strong> Sketch solutions and iterate rapidly.</li>
+    <li><strong>Index Cards:</strong> Flashcards, peer quizzes, and sorting activities.</li>
+    <li><strong>Colored Pens & Highlighters:</strong> Color-code, mind-map, and make ideas pop.</li>
+  </ul>
 </section>
 
-<section id="problem">
-  <h2>The Problem</h2>
-  <p>Students lack engaging tools outside classrooms.</p>
-</section>
-
-<section id="solution">
-  <h2>Our Solution</h2>
-  <p>Creative kits, mentorship, and recognition through skill badges and AI guidance.</p>
-</section>
-
-<footer>© 2025 Valiant Vision</footer>
-
-<!-- FULL SCREEN AI CHAT -->
-<div id="ai-assistant">
-  <div id="ai-header">
-    <span>🤖 Valiant AI Assistant</span>
-    <button onclick="closeAI()" style="background:none;border:none;color:#fff;font-size:20px;cursor:pointer">×</button>
+<!-- PROBLEM & SOLUTION -->
+<section id="problem" class="grid-3">
+  <div class="cardlet">
+    <h3>The Problem</h3>
+    <p>Many students lack engaging tools, feedback, and motivation outside class.</p>
   </div>
-  <div id="ai-messages"></div>
-  <div id="ai-input">
-    <input type="text" id="userInput" placeholder="Ask me anything..."/>
-    <button onclick="sendMessage()">Send</button>
+  <div class="cardlet" id="solution">
+    <h3>Our Solution</h3>
+    <p>Monthly kits + guided prompts + badges keep learners active, motivated, and confident.</p>
   </div>
-</div>
+  <div class="cardlet">
+    <h3>Results</h3>
+    <p>Better portfolios, stronger participation, and real-world opportunities with our partners.</p>
+  </div>
+</section>
 
-<script>
-  const API_URL = "https://script.google.com/macros/s/AKfycby--Buzyn55_1KxawGc9M4q5FwSgUbdnjGkf6LcIo94X9EzwRV9DxQQehFTVBIvhtkDOg/exec";
-
-  const aiAssistant = document.getElementById("ai-assistant");
-  const aiMessages = document.getElementById("ai-messages");
-  const userInput = document.getElementById("userInput");
-
-  document.getElementById("openAI").onclick = () => {
-    aiAssistant.style.display = "flex";
-  };
-  function closeAI(){ aiAssistant.style.display = "none"; }
-
-  function addMessage(text,sender){
-    const msg=document.createElement("div");
-    msg.className="msg " + (sender==="user"?"user-msg":"bot-msg");
-    msg.innerText=text;
-    aiMessages.appendChild(msg);
-    aiMessages.scrollTop=aiMessages.scrollHeight;
-  }
-
-  async function sendMessage(){
-    const text=userInput.value.trim();
-    if(!text) return;
-    addMessage(text,"user");
-    userInput.value="";
-
-    try{
-      let res=await fetch(API_URL,{
-        method:"POST",
-        body:JSON.stringify({prompt:text})
-      });
-      let data=await res.text();
-      addMessage(data,"bot");
-    }catch(err){
-      addMessage("⚠️ Error: "+err.message,"bot");
-    }
-  }
-</script>
+<footer>© 2025 Valiant Vision • Made for curious learners</footer>
 
   <!-- AI Chatbot Widget -->
 <div id="chatbot">
@@ -169,7 +168,6 @@
     <div id="chat-messages"></div>
     <div id="chat-input">
       <input type="text" id="userInput" placeholder="Ask me anything..." />
-      <button id="voiceBtn">🎤</button>
       <button id="sendBtn">➤</button>
     </div>
   </div>
@@ -180,7 +178,97 @@
   #chatbot { position: fixed; bottom: 20px; right: 20px; font-family: Arial, sans-serif; }
   #chat-icon {
     background: #4300b9; color: #fff; font-size: 28px; padding: 14px;
-    border-radius: 50%;
+    border-radius: 50%; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  }
+
+  /* Chat Window */
+  #chat-window {
+    width: 320px; height: 400px; background: #fff; border-radius: 12px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.2); display: flex;
+    flex-direction: column; overflow: hidden; position: absolute;
+    bottom: 70px; right: 0;
+  }
+  .hidden { display: none; }
+
+  #chat-header {
+    background: linear-gradient(135deg, #4300b9, #76b900);
+    color: #fff; padding: 10px; font-weight: bold;
+    display: flex; justify-content: space-between; align-items: center;
+  }
+  #chat-messages {
+    flex: 1; padding: 10px; overflow-y: auto; font-size: 14px;
+    display: flex; flex-direction: column; gap: 8px;
+  }
+  .message { padding: 8px 12px; border-radius: 10px; max-width: 80%; }
+  .user { background: #76b900; color: #fff; align-self: flex-end; }
+  .bot { background: #f1f1f1; align-self: flex-start; }
+  
+  #chat-input {
+    display: flex; padding: 8px; border-top: 1px solid #ddd;
+  }
+  #chat-input input {
+    flex: 1; padding: 8px; border: 1px solid #ccc;
+    border-radius: 8px; font-size: 14px;
+  }
+  #sendBtn {
+    background: #4300b9; color: #fff; border: none; padding: 8px 12px;
+    border-radius: 8px; margin-left: 6px; cursor: pointer;
+  }
+</style>
+
+<script>
+  const chatIcon = document.getElementById("chat-icon");
+  const chatWindow = document.getElementById("chat-window");
+  const closeBtn = document.getElementById("close-btn");
+  const sendBtn = document.getElementById("sendBtn");
+  const userInput = document.getElementById("userInput");
+  const chatMessages = document.getElementById("chat-messages");
+
+  // Toggle Chat Window
+  chatIcon.onclick = () => chatWindow.classList.toggle("hidden");
+  closeBtn.onclick = () => chatWindow.classList.add("hidden");
+
+  // Send Message
+  async function sendMessage() {
+    const text = userInput.value.trim();
+    if (!text) return;
+    
+    // Add user message
+    addMessage(text, "user");
+    userInput.value = "";
+
+    // Loading message
+    const loading = addMessage("Typing...", "bot");
+
+    try {
+      const response = await fetch("YOUR_GOOGLE_SCRIPT_URL", {
+        method: "POST",
+        body: JSON.stringify({ prompt: text })
+      });
+      const data = await response.json();
+      loading.remove();
+      addMessage(data.reply || "⚠️ Error, please try again.", "bot");
+    } catch (err) {
+      loading.remove();
+      addMessage("❌ Network error", "bot");
+    }
+  }
+
+  sendBtn.onclick = sendMessage;
+  userInput.addEventListener("keypress", (e) => {
+    if (e.key === "Enter") sendMessage();
+  });
+
+  // Function to add messages
+  function addMessage(text, sender) {
+    const msg = document.createElement("div");
+    msg.className = "message " + sender;
+    msg.innerText = text;
+    chatMessages.appendChild(msg);
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+    return msg;
+  }
+</script>
 
 </body>
 </html>
