--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <footer>© 2025 Valiant Vision • Made for curious learners</footer>
 
-  <!-- AI Chatbot Widget -->
+ <!-- AI Chatbot Widget -->
 <div id="chatbot">
   <div id="chat-icon">💬</div>
   <div id="chat-window" class="hidden">
@@ -168,6 +168,7 @@
     <div id="chat-messages"></div>
     <div id="chat-input">
       <input type="text" id="userInput" placeholder="Ask me anything..." />
+      <button id="voiceBtn">🎤</button>
       <button id="sendBtn">➤</button>
     </div>
   </div>
@@ -273,3 +274,4 @@
 
 </body>
 </html>
+
