--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <footer>© 2025 Valiant Vision • Made for curious learners</footer>
 
- <!-- AI Chatbot Widget -->
+<!-- ================== AI CHATBOT ================== -->
 <div id="chatbot">
   <div id="chat-icon">💬</div>
   <div id="chat-window" class="hidden">
@@ -175,45 +175,37 @@
 </div>
 
 <style>
-  /* Floating Icon */
-  #chatbot { position: fixed; bottom: 20px; right: 20px; font-family: Arial, sans-serif; }
+  /* Floating button */
+  #chatbot { position: fixed; bottom: 20px; right: 20px; font-family: Arial, sans-serif; z-index: 1000; }
   #chat-icon {
-    background: #4300b9; color: #fff; font-size: 28px; padding: 14px;
-    border-radius: 50%; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    background: #4300b9; color: #fff; font-size: 26px; padding: 14px;
+    border-radius: 50%; cursor: pointer; box-shadow: 0 6px 14px rgba(0,0,0,.2);
   }
-
-  /* Chat Window */
+  /* Chat window */
   #chat-window {
-    width: 320px; height: 400px; background: #fff; border-radius: 12px;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.2); display: flex;
-    flex-direction: column; overflow: hidden; position: absolute;
-    bottom: 70px; right: 0;
+    width: 320px; height: 420px; background: #fff; border-radius: 12px;
+    box-shadow: 0 6px 16px rgba(0,0,0,.25); display: flex; flex-direction: column;
+    position: absolute; bottom: 70px; right: 0;
   }
-  .hidden { display: none; }
-
+  #chat-window.hidden { display: none; }
   #chat-header {
-    background: linear-gradient(135deg, #4300b9, #76b900);
-    color: #fff; padding: 10px; font-weight: bold;
+    background: linear-gradient(135deg, #4300b9, #76b900); color: #fff; padding: 10px;
     display: flex; justify-content: space-between; align-items: center;
+    border-radius: 12px 12px 0 0; font-weight: bold;
   }
   #chat-messages {
-    flex: 1; padding: 10px; overflow-y: auto; font-size: 14px;
-    display: flex; flex-direction: column; gap: 8px;
+    flex: 1; padding: 10px; overflow-y: auto; font-size: 0.95rem;
   }
-  .message { padding: 8px 12px; border-radius: 10px; max-width: 80%; }
-  .user { background: #76b900; color: #fff; align-self: flex-end; }
-  .bot { background: #f1f1f1; align-self: flex-start; }
-  
-  #chat-input {
-    display: flex; padding: 8px; border-top: 1px solid #ddd;
-  }
+  .msg { margin: 8px 0; padding: 8px 12px; border-radius: 10px; max-width: 85%; }
+  .user-msg { background: #4300b9; color: #fff; margin-left: auto; }
+  .bot-msg { background: #f1f1f1; color: #333; margin-right: auto; }
+  #chat-input { display: flex; padding: 10px; gap: 6px; }
   #chat-input input {
-    flex: 1; padding: 8px; border: 1px solid #ccc;
-    border-radius: 8px; font-size: 14px;
+    flex: 1; padding: 10px; border: 1px solid #ccc; border-radius: 8px;
   }
-  #sendBtn {
-    background: #4300b9; color: #fff; border: none; padding: 8px 12px;
-    border-radius: 8px; margin-left: 6px; cursor: pointer;
+  #chat-input button {
+    background: #76b900; border: none; color: #fff; padding: 10px 14px;
+    border-radius: 8px; cursor: pointer; font-size: 16px;
   }
 </style>
 
@@ -222,56 +214,66 @@
   const chatWindow = document.getElementById("chat-window");
   const closeBtn = document.getElementById("close-btn");
   const sendBtn = document.getElementById("sendBtn");
+  const voiceBtn = document.getElementById("voiceBtn");
   const userInput = document.getElementById("userInput");
   const chatMessages = document.getElementById("chat-messages");
 
-  // Toggle Chat Window
+  const API_URL = "https://script.google.com/macros/s/AKfycby--Buzyn55_1KxawGc9M4q5FwSgUbdnjGkf6LcIo94X9EzwRV9DxQQehFTVBIvhtkDOg/exec";
+
+  // Open / close chat
   chatIcon.onclick = () => chatWindow.classList.toggle("hidden");
   closeBtn.onclick = () => chatWindow.classList.add("hidden");
 
-  // Send Message
+  // Add message to chat window
+  function addMessage(text, sender) {
+    const msg = document.createElement("div");
+    msg.className = "msg " + (sender === "user" ? "user-msg" : "bot-msg");
+    msg.innerText = text;
+    chatMessages.appendChild(msg);
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+  }
+
+  // Send message to AI
   async function sendMessage() {
     const text = userInput.value.trim();
     if (!text) return;
-    
-    // Add user message
     addMessage(text, "user");
     userInput.value = "";
 
-    // Loading message
-    const loading = addMessage("Typing...", "bot");
-
     try {
-      const response = await fetch("YOUR_GOOGLE_SCRIPT_URL", {
-
+      let res = await fetch(API_URL, {
         method: "POST",
-        body: JSON.stringify({ prompt: text })
+        body: JSON.stringify({ prompt: text }),
       });
-      const data = await response.json();
-      loading.remove();
-      addMessage(data.reply || "⚠️ Error, please try again.", "bot");
+      let data = await res.text();
+      addMessage(data, "bot");
+
+      // Speak AI response
+      let utterance = new SpeechSynthesisUtterance(data);
+      speechSynthesis.speak(utterance);
+
     } catch (err) {
-      loading.remove();
-      addMessage("❌ Network error", "bot");
+      addMessage("⚠️ Error: " + err.message, "bot");
     }
   }
 
   sendBtn.onclick = sendMessage;
-  userInput.addEventListener("keypress", (e) => {
-    if (e.key === "Enter") sendMessage();
-  });
+  userInput.addEventListener("keypress", e => { if (e.key === "Enter") sendMessage(); });
 
-  // Function to add messages
-  function addMessage(text, sender) {
-    const msg = document.createElement("div");
-    msg.className = "message " + sender;
-    msg.innerText = text;
-    chatMessages.appendChild(msg);
-    chatMessages.scrollTop = chatMessages.scrollHeight;
-    return msg;
-  }
+  // 🎤 Voice recognition
+  voiceBtn.onclick = () => {
+    const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+    recognition.lang = "en-US";
+    recognition.start();
+    recognition.onresult = (e) => {
+      userInput.value = e.results[0][0].transcript;
+      sendMessage();
+    };
+  };
 </script>
+<!-- ================== END CHATBOT ================== -->
 
 </body>
 </html>
+
 
