--- a/whiteboard.html
+++ b/whiteboard.html
@@ -70,6 +70,7 @@
     <button id="arrow">➡️ Arrow</button>
     <button id="eraser">🩹 Eraser</button>
     <button id="sticky">📝 Sticky Note</button>
+    <button id="clearSticky">🗑️ Clear All Notes</button>
     <input type="color" id="color" value="#000000">
     <input type="range" id="thickness" min="1" max="20" value="2">
   </div>
@@ -230,3 +231,4 @@
   </script>
 </body>
 </html>
+
