--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 </div>
 
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbwr9jXK4OJA0qamaLecfhjGOwuw-T2QAbihOrtP4kwUB6WA_uARklD_ILA92sJCorSIeA/exec"; 
+const scriptURL = "YOUR_GAS_WEBAPP_URL"; // replace with your deployed GAS URL
 
 // Toggle chat window
 const chatIcon = document.getElementById('chat-icon');
@@ -307,12 +307,12 @@ closeBtn.addEventListener('click', () => {
 });
 
 // Send message
-document.getElementById('send-btn').addEventListener('click', sendMessage);
+document.getElementById('send-btn').addEventListener('click', handleSend);
 document.getElementById('user-input').addEventListener('keypress', function(e){
-  if(e.key === 'Enter') sendMessage();
+  if(e.key === 'Enter') handleSend();
 });
 
-async function sendMessage() {
+async function handleSend() {
   const input = document.getElementById('user-input');
   const message = input.value.trim();
   if(!message) return;
@@ -323,14 +323,20 @@ async function sendMessage() {
   addMessage("Thinking... 🤔", 'ai-message');
 
   try {
-    const response = await fetch(`${scriptURL}?question=${encodeURIComponent(message)}`);
+    const response = await fetch(scriptURL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ prompt: message })
+    });
+
     const data = await response.json();
-    // Remove "Thinking..." message
+
+    // Remove "Thinking..."
     const messagesDiv = document.getElementById('messages');
     const lastMsg = messagesDiv.lastChild;
     if(lastMsg && lastMsg.textContent === "Thinking... 🤔") lastMsg.remove();
 
-    addMessage(data.answer, 'ai-message');
+    addMessage(data.reply || "No response from AI", 'ai-message');
   } catch(err) {
     console.error(err);
     addMessage("Error connecting to AI.", 'ai-message');
@@ -346,7 +352,6 @@ function addMessage(text, className) {
   messages.scrollTop = messages.scrollHeight;
 }
 </script>
-<!-- AI Chatbot Widget End -->
 
   <script>
 async function sendMessage(prompt) {
@@ -376,6 +381,7 @@ async function sendMessage(prompt) {
 
 </body>
 </html>
+
 
 
 
