--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 </div>
 
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbyCdGPMLgwKlG77vOJ8jqXKc_MPnlQdVxR4nY2UTXxnG92BgndFEH0DAG8S-AcjJFMHyQ/exec"; // replace with your deployed GAS URL
+const scriptURL = "https://valiantvision-ai.narendersindhu1977.workers.dev/"; // replace with your deployed GAS URL
 
 // Toggle chat window
 const chatIcon = document.getElementById('chat-icon');
@@ -354,6 +354,7 @@ function addMessage(text, className) {
 
 </body>
 </html>
+
 
 
 
