--- a/index.html
+++ b/index.html
@@ -289,9 +289,8 @@
     <button id="send-btn">Send</button>
   </div>
 </div>
-
 <script>
-const scriptURL = "https://valiantvision-ai.narendersindhu1977.workers.dev/"; // replace with your deployed GAS URL
+const scriptURL = "https://valiantvision-ai.narendersindhu1977.workers.dev/"; // your Cloudflare Worker URL
 
 // Toggle chat window
 const chatIcon = document.getElementById('chat-icon');
@@ -328,6 +327,12 @@ async function handleSend() {
       body: JSON.stringify({ prompt: message })
     });
 
+    // Check that the response is JSON
+    const contentType = response.headers.get("content-type") || "";
+    if (!contentType.includes("application/json")) {
+      throw new Error("Server returned HTML instead of JSON. Check Cloudflare Worker.");
+    }
+
     const data = await response.json();
 
     // Remove "Thinking..."
@@ -336,6 +341,7 @@ async function handleSend() {
     if(lastMsg && lastMsg.textContent === "Thinking... 🤔") lastMsg.remove();
 
     addMessage(data.result || "No response from AI", 'ai-message');
+
   } catch(err) {
     console.error(err);
     addMessage("Error connecting to AI.", 'ai-message');
@@ -352,8 +358,10 @@ function addMessage(text, className) {
 }
 </script>
 
+
 </body>
 </html>
+
 
 
 
