--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     box-shadow:0 8px 18px rgba(67,0,185,.18);transition:.2s;
   }
   .btn:hover{opacity:.9}
+  
 
   /* ===== SECTIONS ===== */
   section{max-width:1100px;margin:64px auto;padding:0 20px}
@@ -122,6 +123,9 @@
     <p>Unlock monthly creativity kits designed by mentors from leading universities. Join our journey of learning by doing.</p>
     <a href="subscribe.html"><button class="btn">Subscribe Now</button></a>
   </div>
+  <!-- Initial Badge Placeholder -->
+<div id="home-badge" style="display:none;"></div>
+
 </header>
 
 <!-- ABOUT -->
@@ -272,6 +276,28 @@
   cursor: pointer;
 }
 #send-btn:hover { background-color: #45a049; }
+  .home-badge {
+  display: inline-block;
+  margin-top: 15px;
+  background: linear-gradient(135deg, var(--vv-green), var(--vv-purple));
+  color: white;
+  padding: 10px 18px;
+  border-radius: 20px;
+  font-weight: bold;
+  font-size: 1rem;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  opacity: 0;
+  transform: translateY(30px);
+  animation: popIn 0.6s forwards;
+}
+
+@keyframes popIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 </style>
 
 <!-- Chat Icon -->
@@ -357,10 +383,29 @@ function addMessage(text, className) {
   messages.scrollTop = messages.scrollHeight;
 }
 </script>
+  <script>
+  // Show animated badge on homepage if user subscribed
+  window.addEventListener("load", function() {
+    if (localStorage.getItem("subscribed") === "true") {
+      const badgeContainer = document.getElementById("home-badge");
+
+      const badge = document.createElement("div");
+      badge.className = "home-badge";
+      badge.innerHTML = `
+        🏅 Initial Skill Badge
+      `;
+      
+      badgeContainer.appendChild(badge);
+      badgeContainer.style.display = "block";
+    }
+  });
+</script>
+
 
 
 </body>
 </html>
+
 
 
 
