--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   }
   .btn:hover{opacity:.9}
   
+  
 
   /* ===== SECTIONS ===== */
   section{max-width:1100px;margin:64px auto;padding:0 20px}
@@ -112,6 +113,8 @@
       <a href="#solution">Our Solution</a>
       <a href="subscribe.html">Subscribe</a>
       <a href="whiteboard.html">Whiteboard</a>
+      <a href="profile.html">My Profile</a>
+
     </div>
   </div>
 </nav>
@@ -125,6 +128,8 @@
   </div>
   <!-- Initial Badge Placeholder -->
 <div id="home-badge" style="display:none;"></div>
+  <a href="profile.html"><button class="btn">Go to My Profile</button></a>
+
 
 </header>
 
@@ -405,6 +410,7 @@ function addMessage(text, className) {
 
 </body>
 </html>
+
 
 
 
