--- a/subscribe.html
+++ b/subscribe.html
@@ -134,5 +134,43 @@
       .catch(err => alert("❌ Error: " + err));
     });
   </script>
+  <script>
+  document.getElementById("subscribeForm").addEventListener("submit", function(e){
+    e.preventDefault();
+
+    const data = {
+      name: document.getElementById("name").value,
+      email: document.getElementById("email").value,
+      phone: document.getElementById("phone").value,
+      state: document.getElementById("state").value,
+      country: document.getElementById("country").value,
+      class: document.getElementById("class").value,
+      school: document.getElementById("school").value,
+      skills: document.getElementById("skills").value,
+      hobbies: document.getElementById("hobbies").value,
+      achievements: document.getElementById("achievements").value
+    };
+
+    fetch("https://script.google.com/macros/s/AKfycbzQBzQ8BY0-H6qfi2E0WJ1ijWx_gXngz9O5SUyeo3iI6dZXirxEA1xFhdJKkIWWeU3T/exec", {
+      method: "POST",
+      body: JSON.stringify(data)
+    })
+    .then(res => {
+      // ✅ Save subscription status in localStorage
+      localStorage.setItem("subscribed", "true");
+
+      // ✅ Save user profile info for profile.html
+      localStorage.setItem("userProfile", JSON.stringify(data));
+
+      alert("✅ Subscription successful!");
+      
+      // ✅ Redirect to profile page
+      window.location.href = "profile.html";
+    })
+    .catch(err => alert("❌ Error: " + err));
+  });
+</script>
+
 </body>
 </html>
+
